2002-01-04  Mark Mitchell  <mark@codesourcery.com>

	* scripts/qm-release: New file.

2002-01-03  Mark Mitchell  <mark@codesourcery.com>

	* GNUmakefile.in (QM_TOOLS): Compute it automatically.

	* GNUmakefile.in (QM_TOOLS): New variable.
	(MAKEFILE_PRE_IN): Remove.
	(SCRIPTS): Calculate it automatically.
	(DTD_CATALOG): New variable.
	(COMMON_DTDS): Likewise.
	(TOOL_DTDS): Likewise.
	(COPIED_TOOL_DTDS): Likewise.
	(DTDS): Likewise.
	(JADECMD): Likewise.
	(DOCBOOK_MAIN): Remove.
	(DOCBOOK_SOURCES): Likewise.
	(HTMLDIR): Likewise.
	(HTMLINDEX): Likewise.
	(HTMLMANIFEST): Likewise.
	(HTMLTARBALL): Likewise.
	(PRINTDIR): Likewise.
	(PRINTTEX): Likewise.
	(PRINTPDF): Likewise.
	(HTML_MANUALS): New variable.
	(TEX_MANUALS): Likewise.
	(PDF_MANUALS): Likewise.
	(all): Add dependencies.
	(PYTHON_PACKAGES): Use -q option to setup.py.
	(DTD_CATALOG): New taret.
	(COPIED_TOOL_DTDS): Likewise.
	(clean): Clean up more stuff.
	(distclean): Remove GNUmakefile, not Makefile.
	(doc-html): Depend on HTML_MANUALS.
	(HTML_MANUALS): New rule.
	(TEX_MANUALS): Likewise.
	Adjust installation rules.
	* doc/qm-html.dsl: Rename to ...
	* doc/qm-sgml.dsl: ... this.
	* doc/qm-print.dsl: Rename to ...
	* doc/qm-tex.dsl: ... this.
	* doc/manual/introduction.xml: Remove.
	* doc/manual/manual.xml: Likewise.
	* doc/manual/test-manual.xml: Likewise.
	* doc/manual/test-tour.xml: Likewise.
	* doc/manual/track-email.xml: Likewise.
	* doc/manual/track-manual.xml: Likewise.
	* doc/manual/track-tour.xml: Likewise.
	* qm/.cvsignore: Add build.
	* qm/common.py (rmdir_recursively): Remove bogus assertion.
	(add_exit_function): Simplify.
	(_at_exit): Rename to ...
	(exit): This.
	* qm/diagnostic.py (load_messages): New function.
	(__initialize_module): Tweak.
	* qm/qm.sh: Fix typo in comment.
	* qm/setup.py: Automatically compute names of packages.
	* qm/setup_path.py.in: Add zope-dtml/ExtensionClass build
	directory to list of directories to search in build tree.
	* qm/test/.cvsignore: Remove qmtest-remote.