@@ -144,6 +144,7 @@ if test "$JADE" != no; then
     /usr/share/doc/jade*/pubtext/xml.dcl \
     /usr/share/doc/openjade*/pubtext/xml.dcl \
     /usr/doc/jade*/pubtext/xml.dcl \
+    /usr/share/sgml/declaration/xml.dcl \
   ; do
     if test -r "$file"; then
       XML_DCL=$file
@@ -163,6 +164,7 @@ AC_MSG_CHECKING(DocBook stylesheets)
 DOCBOOK_STYLESHEETS=no
 for dir in \
   /usr/lib/sgml/stylesheets/docbook \
+  /usr/lib/sgml/stylesheet/dsssl/docbook \
 ; do
   if test -d $dir; then
     DOCBOOK_STYLESHEETS=$dir
@@ -177,7 +179,7 @@ dnl Find the Docbook DTD.
 dnl #####################
 
 DOCBOOK_DTD=
-AC_MSG_CHECKING(for dobook DTD)
+AC_MSG_CHECKING(for docbook DTD)
 AC_ARG_WITH(docbook-dtd, 
             [  --with-docbook-dtd=PATH directory containing the docbook DTD.],
             [case $withval in
